add Swap Deal Route Rule Criteria Directive
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41370

--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/TOne.WhS.Deal.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/TOne.WhS.Deal.Web.csproj
@@ -162,6 +162,8 @@
     <Content Include="WhS_Deal\Constant\TimePeriodTypeEnum.js" />
     <Content Include="WhS_Deal\Constant\VolumeCommitmentTypeEnum.js" />
     <Content Include="WhS_Deal\Constant\ZoneRateEvaluationTypeEnum.js" />
+    <Content Include="WhS_Deal\Directives\Extensions\SwapDealAnalysis\RouteRuleCriteria\Templates\SwapDealRouteRuleCriteriaDirective.html" />
+    <Content Include="WhS_Deal\Directives\Extensions\SwapDealAnalysis\RouteRuleCriteria\vr-whs-deal-swapdealanalysis-routerulecriteria.js" />
     <Content Include="WhS_Deal\Directives\Extensions\SwapDealAnalysis\Inbound\RateCalcMethod\Templates\FixedInboundRateCalcMethodItemEditorTemplate.html" />
     <Content Include="WhS_Deal\Directives\Extensions\SwapDealAnalysis\Inbound\RateCalcMethod\Templates\SuppliersInboundRateCalcMethodEditorTemplate.html" />
     <Content Include="WhS_Deal\Directives\Extensions\SwapDealAnalysis\Inbound\RateCalcMethod\Templates\SuppliersInboundRateCalcMethodItemEditorTemplate.html" />
