--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/TOne.WhS.Deal.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/TOne.WhS.Deal.Web.csproj
@@ -194,8 +194,10 @@
     <Content Include="WhS_Deal\Directives\SwapDealAnalysis\Templates\SwapDealAnalysisSettingsTemplate.html" />
     <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\RouteRulesDefinition\Templates\SwapDealBuyRouteRuleDefinitionSettingsTemplate.html" />
     <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\Templates\SwapDealBuyRouteRuleGridTemplate.html" />
+    <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\Templates\SwapDealBuyRouteRuleViewTemplate.html" />
     <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\vr-whs-deal-swapdeal-buyrouterule-grid.js" />
     <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\RouteRulesDefinition\vr-whs-deal-swapdeal-buyrouteruledefinition-settings.js" />
+    <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\vr-whs-deal-swapdeal-buyrouterule-view.js" />
     <Content Include="WhS_Deal\Directives\SwapDeal\Templates\SwapDealGridTemplate.html" />
     <Content Include="WhS_Deal\Directives\SwapDeal\Templates\SwapDealOutboundGridTemplate.html" />
     <Content Include="WhS_Deal\Directives\SwapDeal\Templates\SwapDealInboundGridTemplate.html" />
