--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Business/TOne.WhS.Deal.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Business/TOne.WhS.Deal.Business.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="Context\SwapDealAnalysisInboundRateCalcMethodContext.cs" />
     <Compile Include="Context\SwapDealAnalysisOutboundRateCalcMethodContext.cs" />
+    <Compile Include="SwapDeals\RouteRules\SwapDealBuyRouteRuleManager.cs" />
     <Compile Include="SwapDeals\SwapDealRouteBuildInterceptor.cs" />
     <Compile Include="VolCommitmentDealManager.cs" />
     <Compile Include="SwapDeals\SwapDealManager.cs" />
