--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Entities/TOne.WhS.Deal.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Entities/TOne.WhS.Deal.Entities.csproj
@@ -56,18 +56,20 @@
     <Compile Include="SwapDealAnalysis\RateCalcMethod\Outbound\SwapDealAnalysisOutboundItemRateCalcMethod.cs" />
     <Compile Include="SwapDealAnalysis\RateCalcMethod\Outbound\SwapDealAnalysisOutboundRateCalcMethod.cs" />
     <Compile Include="SwapDealAnalysis\RateCalcMethod\Outbound\SwapDealAnalysisOutboundRateCalcMethodConfig.cs" />
-    <Compile Include="SwapDeals\RouteRules\RouteRulesDefinition\SwapDealBuyRouteRuleDefinitionSettings.cs" />
-    <Compile Include="SwapDeals\RouteRules\SwapDealBuyRouteRule.cs" />
-    <Compile Include="SwapDeals\RouteRules\SwapDealBuyRouteRuleSettings.cs" />
-    <Compile Include="SwapDeals\SwapDealDetail.cs" />
-    <Compile Include="SwapDeals\SwapDealQuery.cs" />
+    <Compile Include="SwapDeal\RouteRules\RouteRulesDefinition\SwapDealBuyRouteRuleDefinitionSettings.cs" />
+    <Compile Include="SwapDeal\RouteRules\SwapDealBuyRouteRule.cs" />
+    <Compile Include="SwapDeal\RouteRules\SwapDealBuyRouteRuleDetails.cs" />
+    <Compile Include="SwapDeal\RouteRules\SwapDealBuyRouteRuleQuery.cs" />
+    <Compile Include="SwapDeal\RouteRules\SwapDealBuyRouteRuleSettings.cs" />
+    <Compile Include="SwapDeal\SwapDealDetail.cs" />
+    <Compile Include="SwapDeal\SwapDealQuery.cs" />
     <Compile Include="DealDefinitionDetail.cs" />
     <Compile Include="DealSettingsConfig.cs" />
     <Compile Include="Settings\SwapDealSettingData.cs" />
-    <Compile Include="SwapDeals\SwapDealAnalysisResult.cs" />
-    <Compile Include="SwapDeals\SwapDealAnalysisDefinition.cs" />
-    <Compile Include="SwapDeals\SwapDealOutbound.cs" />
-    <Compile Include="SwapDeals\SwapDealInbound.cs" />
+    <Compile Include="SwapDeal\SwapDealAnalysisResult.cs" />
+    <Compile Include="SwapDeal\SwapDealAnalysisDefinition.cs" />
+    <Compile Include="SwapDeal\SwapDealOutbound.cs" />
+    <Compile Include="SwapDeal\SwapDealInbound.cs" />
     <Compile Include="VolumeCommitment\VolCommitmentDealQuery.cs" />
     <Compile Include="VolumeCommitment\VolCommitmentDealItem.cs" />
     <Compile Include="VolumeCommitment\VolCommitmentDealItemTier.cs" />
@@ -75,7 +77,7 @@
     <Compile Include="DealDefinition.cs" />
     <Compile Include="DealSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SwapDeals\SwapDealSettings.cs" />
+    <Compile Include="SwapDeal\SwapDealSettings.cs" />
     <Compile Include="VolumeCommitment\VolCommitmentDetail.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
