--- a/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
+++ b/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
@@ -79,6 +79,7 @@
     <Compile Include="GenericLKUP\GenericLKUPManager.cs" />
     <Compile Include="OverriddenConfigurationGroupManager.cs" />
     <Compile Include="OverriddenConfiguration\OverriddenConfigurationManager.cs" />
+    <Compile Include="Region\RegionManager.cs" />
     <Compile Include="Setting\SettingOverriddenConfiguration.cs" />
     <Compile Include="StatusDefinitionFilterContext.cs" />
     <Compile Include="VRActionAudit\VRActionAuditLKUPManager.cs" />
