Adding SwapDealBuyRouteRuleExtendedSettingsConfig Adding BED and EED @SwapDealSettingsDetail
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41409

--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Entities/TOne.WhS.Deal.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Entities/TOne.WhS.Deal.Entities.csproj
@@ -61,8 +61,10 @@
     <Compile Include="SwapDeal\RouteRules\RouteRulesDefinition\SwapDealBuyRouteRuleDefinitionSettings.cs" />
     <Compile Include="SwapDeal\RouteRules\SwapDealBuyRouteRule.cs" />
     <Compile Include="SwapDeal\RouteRules\SwapDealBuyRouteRuleDetails.cs" />
+    <Compile Include="SwapDeal\RouteRules\SwapDealBuyRouteRuleExtendedSettings.cs" />
     <Compile Include="SwapDeal\RouteRules\SwapDealBuyRouteRuleQuery.cs" />
     <Compile Include="SwapDeal\RouteRules\SwapDealBuyRouteRuleSettings.cs" />
+    <Compile Include="SwapDeal\RouteRules\SwapDealBuyRouteRuleExtendedSettingsConfig.cs" />
     <Compile Include="SwapDeal\SwapDealDetail.cs" />
     <Compile Include="SwapDeal\SwapDealQuery.cs" />
     <Compile Include="DealDefinition\DealDefinitionDetail.cs" />
