fixing shift time
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41416

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -222,6 +222,7 @@
     <Content Include="WhS_BusinessEntity\Constant\RoutingProductSupplierRelationTypeEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\SalePriceListOwnerTypeEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\SalePriceListTemplateSettingsCodesByZoneBEFieldEnum.js" />
+    <Content Include="WhS_BusinessEntity\Constant\SupplierEntityServiceSourceEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\SwitchConnectivityTypeEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\VolumeCommitmentTypeEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\SalePriceListTemplateSettingsCodeOnEachRowBEFieldEnum.js" />
