Update Mediation CDR Schema
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41430

--- a/Mediation/Code/Mediation.Runtime/App.config
+++ b/Mediation/Code/Mediation.Runtime/App.config
@@ -84,7 +84,7 @@
   <!-- BEGIN CUSTOMER VARYING SECTION -->
   <appSettings file="appSettings.config">
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
-    <add key="IsRuntimeService" value="true"/>
+    <add key="IsRuntimeService" value="false"/>
     <add key="BCPTempFilesDirectory"  value="C:\BCPFiles" />
 
     <add key="RuntimeConnStringKey"                             value="TransactionDBConnString"/>
@@ -113,7 +113,7 @@
     <add key="BCPDonotDeleteFiles" value="false"/>
     <add key="BusinessProcess_ActivityEventsTracking" value="false"/>
 
-    <add key="ExposedConnectionStringNames" value="Mediation_GenericRecord_DBConnString"/>
+    <add key="ExposedConnectionStringNames" value="Mediation_GenericRecord_DBConnString,Mediation_CDR_DBConnString"/>
   </appSettings>
   <system.codedom>
     <compilers>
