--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Data.SQL/TOne.WhS.Routing.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Data.SQL/TOne.WhS.Routing.Data.SQL.csproj
@@ -62,6 +62,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CodeMatchesDataManager.cs" />
+    <Compile Include="CarrierAccountDataManager.cs" />
+    <Compile Include="SaleZoneDataManager.cs" />
     <Compile Include="CodeSaleZoneDataManager.cs" />
     <Compile Include="CodeZoneMatchDataManager.cs" />
     <Compile Include="CustomerRouteDataManager.cs" />
