added UseCentralizedCacheRefresher to CacheManager
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41446

--- a/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
+++ b/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
@@ -68,6 +68,7 @@
     <Compile Include="BigData\BigDataServiceCacheManager.cs" />
     <Compile Include="BigData\BigDataWCFService.cs" />
     <Compile Include="BigData\IBigDataRequest.cs" />
+    <Compile Include="CacheRefreshManager.cs" />
     <Compile Include="CityManager.cs" />
     <Compile Include="ComponentType\VRComponentTypeBESettings.cs" />
     <Compile Include="ComponentType\VRComponentTypeManager.cs" />
