--- a/Vanrise/Code/Vanrise.Common.Data/Vanrise.Common.Data.csproj
+++ b/Vanrise/Code/Vanrise.Common.Data/Vanrise.Common.Data.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ICacheRefreshDataManager.cs" />
     <Compile Include="IRegionDataManager.cs" />
     <Compile Include="IGenericLKUPItemDataManager.cs" />
     <Compile Include="IOverriddenConfigurationDataManager.cs" />
