--- a/Vanrise/Code/Vanrise.Common.Data.SQL/Vanrise.Common.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Common.Data.SQL/Vanrise.Common.Data.SQL.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BigDataServiceDataManager.cs" />
+    <Compile Include="CacheRefreshDataManager.cs" />
     <Compile Include="RegionDataManager.cs" />
     <Compile Include="CityDataManager.cs" />
     <Compile Include="GenericLKUPItemDataManager.cs" />
