--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BigData\BigDataService.cs" />
+    <Compile Include="CacheRefreshHandle.cs" />
     <Compile Include="City\CityInfo.cs" />
     <Compile Include="City\City.cs" />
     <Compile Include="City\CityDetail.cs">
