--- a/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
+++ b/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
@@ -239,6 +239,7 @@
     <Content Include="Client\Javascripts\Directives\Chart\vr-solidgauge-chart-directive.js" />
     <Content Include="Client\Javascripts\Directives\Containers\vr-dropdown-section.js" />
     <Content Include="Client\Javascripts\Directives\Containers\vr-overall-widget.js" />
+    <Content Include="Client\Javascripts\Directives\Containers\vr-tile-directive.js" />
     <Content Include="Client\Javascripts\Directives\Containers\vr-section-v2.js" />
     <Content Include="Client\Javascripts\Directives\Containers\vr-preview-image-directive.js" />
     <Content Include="Client\Javascripts\Directives\Containers\vr-columns-directive.js" />
