Implementing Recuring chagers and multinet invoice
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41459

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
@@ -211,6 +211,7 @@
     <Content Include="Retail_BusinessEntity\Constant\AccountStatusEnum.js" />
     <Content Include="Retail_BusinessEntity\Constant\DIDNumberTypeEnum.js" />
     <Content Include="Retail_BusinessEntity\Constant\FinancialAccountEffectiveEnum.js" />
+    <Content Include="Retail_BusinessEntity\Constant\PeriodicRecurringChargePeriodTypeEnum.js" />
     <Content Include="Retail_BusinessEntity\Constant\TrafficDirectionEnum.js" />
     <Content Include="Retail_BusinessEntity\Constant\ChargeTypeEnum.js" />
     <Content Include="Retail_BusinessEntity\Constant\ConnectionTypeEnum.js" />
@@ -387,10 +388,19 @@
     <Content Include="Retail_BusinessEntity\Directives\MainExtensions\TransformationSteps\retail-be-retrievefinancialinfostep.js" />
     <Content Include="Retail_BusinessEntity\Directives\MainExtensions\TransformationSteps\Templates\RetrieveFinancialInfoStepPreviewTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\MainExtensions\TransformationSteps\Templates\RetrieveFinancialInfoStepTemplate.html" />
-    <Content Include="Retail_BusinessEntity\Directives\Package\PackageDefinition\MainExtensions\ExtendedSettings\retail-be-packagedefinition-extendedsettings-invoicerecurcharge.js" />
-    <Content Include="Retail_BusinessEntity\Directives\Package\PackageDefinition\MainExtensions\ExtendedSettings\Templates\InvoiceRecurchargePackageDefinitionSettingsTemplate.html" />
-    <Content Include="Retail_BusinessEntity\Directives\Package\PackageRuntime\MainExtensions\PackageTypes\retail-be-packagesettings-extendedsettings-invoicerecurcharge.js" />
-    <Content Include="Retail_BusinessEntity\Directives\Package\PackageRuntime\MainExtensions\PackageTypes\Templates\InvoiceRecurChargePackageSettingsTemplate.html" />
+    <Content Include="Retail_BusinessEntity\Directives\Package\PackageDefinition\MainExtensions\ExtendedSettings\MainExtensions\retail-be-packagedefinition-recurcharge-evaluator-onetime.js" />
+    <Content Include="Retail_BusinessEntity\Directives\Package\PackageDefinition\MainExtensions\ExtendedSettings\MainExtensions\retail-be-packagedefinition-recurcharge-evaluator-periodic.js" />
+    <Content Include="Retail_BusinessEntity\Directives\Package\PackageDefinition\MainExtensions\ExtendedSettings\MainExtensions\Templates\OneTimeEvaluatorTemplate.html" />
+    <Content Include="Retail_BusinessEntity\Directives\Package\PackageDefinition\MainExtensions\ExtendedSettings\MainExtensions\Templates\PeriodicEvaluatorTemplate.html" />
+    <Content Include="Retail_BusinessEntity\Directives\Package\PackageDefinition\MainExtensions\ExtendedSettings\retail-be-packagedefinition-extendedsettings-recurcharge.js" />
+    <Content Include="Retail_BusinessEntity\Directives\Package\PackageDefinition\MainExtensions\ExtendedSettings\retail-be-packagedefinition-invoicerecurcharge-evaluator.js" />
+    <Content Include="Retail_BusinessEntity\Directives\Package\PackageDefinition\MainExtensions\ExtendedSettings\Templates\RecurchargePackageDefinitionSettingsTemplate.html" />
+    <Content Include="Retail_BusinessEntity\Directives\Package\PackageRuntime\MainExtensions\PackageTypes\MainExtensions\retail-be-packagesettings-recurcharge-evaluator-onetime.js" />
+    <Content Include="Retail_BusinessEntity\Directives\Package\PackageRuntime\MainExtensions\PackageTypes\MainExtensions\retail-be-packagesettings-recurcharge-evaluator-periodic.js" />
+    <Content Include="Retail_BusinessEntity\Directives\Package\PackageRuntime\MainExtensions\PackageTypes\MainExtensions\Templates\OneTimeEvaluatorTemplate.html" />
+    <Content Include="Retail_BusinessEntity\Directives\Package\PackageRuntime\MainExtensions\PackageTypes\MainExtensions\Templates\PeriodicEvaluatorTemplate.html" />
+    <Content Include="Retail_BusinessEntity\Directives\Package\PackageRuntime\MainExtensions\PackageTypes\retail-be-packagesettings-extendedsettings-recurcharge.js" />
+    <Content Include="Retail_BusinessEntity\Directives\Package\PackageRuntime\MainExtensions\PackageTypes\Templates\RecurChargePackageSettingsTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\ProductFamily\ProductFamilyPackageItemEditorController.js" />
     <Content Include="Retail_BusinessEntity\Directives\ProductFamily\retail-be-productfamily-grid.js" />
     <Content Include="Retail_BusinessEntity\Directives\ProductFamily\retail-be-productfamily-selector.js" />
