--- a/Retail/Code/Retail.MultiNet.Entities/Retail.MultiNet.Entities.csproj
+++ b/Retail/Code/Retail.MultiNet.Entities/Retail.MultiNet.Entities.csproj
@@ -46,7 +46,8 @@
     <Compile Include="InvoiceDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RDLCInvoiceDetails.cs" />
-    <Compile Include="RDLCInvoiceItemDetails.cs" />
+    <Compile Include="RDLCSummaryInvoiceItemDetails.cs" />
+    <Compile Include="RDLCUsageSummaryInvoiceItemDetails.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
