--- a/Vanrise/Code/Vanrise.Invoice.Business/Vanrise.Invoice.Business.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Business/Vanrise.Invoice.Business.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Context\GetMeasureValueContext.cs" />
     <Compile Include="Context\GroupingInvoiceItemQueryContext.cs" />
     <Compile Include="Context\InitialPeriodInfoContext.cs" />
+    <Compile Include="Context\InvoiceAccountDataContext.cs" />
     <Compile Include="Context\InvoiceGenerationContext.cs" />
     <Compile Include="Context\InvoiceItemConcatenatedPartContext.cs" />
     <Compile Include="Context\InvoicePartnerFilterContext.cs" />
