Added and implemented the NewRateIsGreaterThanMaximumRateCondition business rule
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41463

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
@@ -106,6 +106,7 @@
     <Compile Include="BusinessRules\Conditions\CustomerZoneRateBEDIsGreaterThanSellingProductZoneRateBEDCondition.cs" />
     <Compile Include="BusinessRules\Conditions\CustomerZoneRateHasInvalidEEDCondition.cs" />
     <Compile Include="BusinessRules\Conditions\DraftNewRateIsClosed.cs" />
+    <Compile Include="BusinessRules\Conditions\NewRateIsGreaterThanMaximumRateCondition.cs" />
     <Compile Include="BusinessRules\Conditions\SellingProductNormalRateDoesNotExistCondition.cs" />
     <Compile Include="BusinessRules\Conditions\NormalRateBEDLessThanValidBEDCondition.cs" />
     <Compile Include="BusinessRules\Conditions\NormalRateEEDGreaterThanZoneEED.cs" />
