Added and implemented ImportedRateIsGreaterThanMaximumRateCondition
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41468

--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Business/TOne.WhS.SupplierPriceList.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Business/TOne.WhS.SupplierPriceList.Business.csproj
@@ -81,6 +81,7 @@
     <Compile Include="BusinessRules\Conditions\ValidateAfterProcessing\RateIncreasedCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateAfterProcessing\ZoneBEDGreaterThanSystemPeriodCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateCodesRates\MissingZonesCondition.cs" />
+    <Compile Include="BusinessRules\Conditions\ValidateImportedZones\ImportedRateIsGreaterThanMaximumRateCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateZones\BEDBeforeRetroActiveMinDateCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateZones\RateGreaterThanZero.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateZones\ZoneServicesWithDifferentBEDCondition.cs" />
